Mon Jun 23 2014 (2.3.0)
1. changes
  * updates for Stan 2.3.0 
  * use \n instead of \r for printing sampling progress
  * default to 2 digits after decimal place for print method for stanfit 

Wed Apr 15 2014
1. Bug fixes
  * issue 62

Wed Feb 26 2014
1. Bug fixes
  * issue 51


Thu Feb 13 2014 (2.2.0)

Sun Feb  9 2014
1. Bug fixes
   * index out of bounds with Rcpp 0.11

Wed Jan 22 2014
1. Bug fixes
   * RNG seed for optimizing not used (issue #37)

2. Changes
   * add as_vector with default value of TRUE for stanmodel@optimizing
   * read_stan_csv uses R's functions to open files so that compressed
     files such as gzip are supported.  But a compressed file can include
     only one file.

Sat Dec 21 2013 
1. Changes
   * speed up stanfit@extract for permuted=TRUE (code from R. Boylan)
   * changes due to changes in Stan's interface 

Sun Oct 20 2013
1. Bug fixes
   * specify sampler parameters such as using dense_e, unit_e
2. Changes
   * using fixed path for boost and eigen in Makefile.win
   
Sun Oct 15 2013
1. Bug fixes
2. New features
   * add window option to traceplot
   * add all optimizers in Stan 
3. Changes
   * arguments for function stan due to the changes in Stan 2.0

May 23 2013
1. Bug fixes
   * the output csv files was using col-major order, which should be 
     row-major order 

Mar 13 2013
1. Changes
   * showing progress of sampling at the same line (using \r instead of \n)
   * plot for stanfit allows multiple pages 
2. New features 
   * add rstan:::as.mcmc.list to convert stanfit object 
     to coda object 

Fri Feb 24 2013
1. Bug fixes 
   * NA's are created when converting too large integers during data
     preprocessing
   * plot when there is an array parameter of length 1
2. New features 
   * expose a model's log_prob and grad_log_prob function 
     and add functions for transforming parameters between
     constrained space and unconstrained space
   * add a function monitor to summarize any mcmc samples given 