@@ -34,14 +34,3 @@ optim2l <- rstan:::optimizing(sm, data = dat, algorithm = 'LBFGS',
                               sample_file = 'opt.csv', init_alpha = 0.02,
                               tol_obj = 1e-7, tol_grad=1e-9, tol_param=1e-7)
 print(optim2l)
-
-optim3 <- rstan:::optimizing(sm, data = dat, algorithm = 'Nesterov', stepsize = 0.5)
-print(optim3)
-
-optim4 <- rstan:::optimizing(sm, data = dat, algorithm = 'Nesterov', stepsize = 0.5, as_vector = FALSE)
-print(optim4)
-
-
-
-
-
