@@ -19,7 +19,6 @@
 #include <stan/model/util.hpp>
 
 #include <stan/optimization/newton.hpp>
-#include <stan/optimization/nesterov_gradient.hpp>
 #include <stan/optimization/bfgs.hpp>
 
 #include <stan/mcmc/hmc/static/adapt_unit_e_static_hmc.hpp>
@@ -901,61 +900,7 @@ namespace rstan {
             print_vector(params_inr_etc, sample_stream);
             sample_stream.close();
           }
-        } else if (Nesterov == args.get_ctrl_optim_algorithm()) {
-          rstan::io::rcout << "STAN OPTIMIZATION COMMAND (Nesterov)" << std::endl;
-          rstan::io::rcout << "stepsize = " << args.get_ctrl_optim_stepsize() << std::endl;
-          if (args.get_sample_file_flag()) {
-            write_comment(sample_stream,"Point Estimate Generated by Stan (Nesterov)");
-            write_comment(sample_stream);
-            write_comment_property(sample_stream,"stan_version_major",stan::MAJOR_VERSION);
-            write_comment_property(sample_stream,"stan_version_minor",stan::MINOR_VERSION);
-            write_comment_property(sample_stream,"stan_version_patch",stan::PATCH_VERSION);
-            write_comment_property(sample_stream,"init",init_val);
-            write_comment_property(sample_stream,"seed",args.get_random_seed());
-            write_comment_property(sample_stream,"stepsize",args.get_ctrl_optim_stepsize());
-            write_comment(sample_stream);
-  
-            sample_stream << "lp__,"; // log probability first
-            model.write_csv_header(sample_stream);
-          }
-  
-          stan::optimization::NesterovGradient<Model> ng(model, cont_vector, disc_vector,
-                                                         args.get_ctrl_optim_stepsize(),
-                                                         &rstan::io::rcout);
-          double lp = ng.logp();
-          double lastlp = lp - 1;
-          rstan::io::rcout << "initial log joint probability = " << lp << std::endl;
-          int m = 0;
-          for (int i = 0; i < args.get_iter(); i++) {
-            R_CheckUserInterrupt(); 
-            lastlp = lp;
-            lp = ng.step();
-            ng.params_r(cont_vector);
-            if (stan::common::do_print(i, i==0, args.get_ctrl_optim_refresh())) {
-              rstan::io::rcout << "Iteration ";
-              rstan::io::rcout << std::setw(2) << (m + 1) << ". ";
-              rstan::io::rcout << "Log joint probability = " << std::setw(10) << lp;
-              rstan::io::rcout << ". Improved by " << (lp - lastlp) << ".";
-              rstan::io::rcout << std::endl;
-              rstan::io::rcout.flush();
-            }
-            m++;
-            if (args.get_sample_file_flag()) {
-              sample_stream << lp << ',';
-              model.write_csv(base_rng,cont_vector,disc_vector,sample_stream);
-            }
-          }
-  
-          sample_stream << lp << ',';
-          model.write_array(base_rng,cont_vector,disc_vector,params_inr_etc);
-          holder = Rcpp::List::create(Rcpp::_["par"] = params_inr_etc, 
-                                      Rcpp::_["value"] = lp);
-          if (args.get_sample_file_flag()) { 
-            sample_stream << lp << ',';
-            print_vector(params_inr_etc, sample_stream);
-            sample_stream.close();
-          }
-        } 
+        }
         return 0;
       }  
       Eigen::VectorXd cont_params = Eigen::VectorXd::Zero(model.num_params_r());
