@@ -16,7 +16,7 @@
   \S4method{optimizing}{stanmodel}(object, data = list(), 
     seed = sample.int(.Machine$integer.max, 1), init = 'random', 
     check_data = TRUE, sample_file, 
-    algorithm = c("BFGS", "LBFGS", "Nesterov", "Newton"),
+    algorithm = c("BFGS", "LBFGS", "Newton"),
     verbose = FALSE, hessian = FALSE, as_vector = TRUE, \dots)   
 } 
 
@@ -59,7 +59,7 @@
     write samples for \emph{all} parameters and other saved quantities. 
     If not provided, files are not created. When the folder specified 
     is not writable, \code{tempdir()} is used.}
-  \item{algorithm}{One of "Newton", "Nesterov", "BFGS", and "LBFGS" indicating which
+  \item{algorithm}{One of "Newton", "BFGS", and "LBFGS" indicating which
     optimization algorithm is used. The default is BFGS.}
   \item{verbose}{\code{TRUE} or \code{FALSE}: flag indicating whether 
      to print intermediate output from Stan on the console.}
@@ -74,7 +74,6 @@
       \item \code{iter} (\code{integer}), the maximum number of iterations
       \item \code{save_iterations} (logical), whether to save the iterations 
       \item \code{refresh} (\code{integer})
-      \item \code{stepsize} (\code{double}), for Nesterov, see the manual of Stan
       \item \code{init_alpha} (\code{double}, default to 0.001), for BFGS and LBFGS, see manual of Stan
       \item \code{tol_obj} (\code{double}, default to 1e-12), for BFGS and LBFGS, see the manual of Stan
       \item \code{tol_grad} (\code{double}, default to 1e-8), for BFGS and LBFGS, see the manual of Stan
