@@ -1,3 +1,7 @@
+Sat Jul 12 2014
+1. changes
+  * remove nesterov optim algorithm
+
 Mon Jun 23 2014 (2.3.0)
 1. changes
   * updates for Stan 2.3.0 
